crates/rolldown/tests/rolldown/errors/invalid_export_mode/should_not_be_default/main.js
export default function() {
  return 'should not be none';
}